# freeg3x

./: CMakeLists.txt  README.md  g3x.pc.in
include/: g3x.h  g3x_basix.h  g3x_capture.h  g3x_colors.h  g3x_macros.h  g3x_pnm.h  g3x_quaternions.h  g3x_tools.h  g3x_transfo.h  g3x_types.h
src/: g3x_basix.c  g3x_capture.c  g3x_pnm.c  g3x_quaternions.c  g3x_tools.c  g3x_transfo.c
